# wipod_ws

./: README.md  bashrc  goals.json  latlon.json
localization/LIO-SAM/: CMakeLists.txt
localization/LIO-SAM/config/: params.yaml  rviz2.rviz
localization/LIO-SAM/include/lio_sam/: utility.hpp
localization/LIO-SAM/launch/: robot_state_publisher.launch.py  run.launch.py
localization/LIO-SAM/scripts/: map.py  map_lodaer.py
localization/LIO-SAM/src/: imageProjection.cpp
localization/ekf_localizer/: CMakeLists.txt  package.xml
localization/ekf_localizer/include/: ekf_localizer.hpp
localization/ekf_localizer/launch/: ekf_localizer_launch.py
localization/ekf_localizer/params/: ekf_localizer_params.yaml
localization/ekf_localizer/src/: ekf_localizer.cpp
localization/gyro_odometer/: CMakeLists.txt  package.xml
localization/gyro_odometer/config/: gyro_odometer.param.yaml
localization/gyro_odometer/include/: gyro_odometer_core.hpp  twist_with_covariance_stamped.hpp
localization/gyro_odometer/launch/: gyro_odometer.launch.xml
localization/gyro_odometer/src/: gyro_odometer_core.cpp
localization/map_visualizer/include/osmVisualizer/: TransverseMercatorProjector.hpp  osmVisualizer.hpp
localization/map_visualizer/launch/: osm_visualizer.launch.py  osm_visualizer.launch.xml
localization/map_visualizer/osms/: a.osm  b.osm  c.osm  c.yaml  d.osm  lanelet2_map.osm  map.osm  map_projector_info.yaml  new_lanelet2_maps.osm  new_lanelet2_maps.yaml  rvce.osm
localization/map_visualizer/src/occupancyGrid/: occupancyGrip.cpp  occupancyGrip2.cpp
localization/map_visualizer/src/osmVisualizer/: osmVisualizer.cpp
localization/ndt_localizer/: CMakeLists.txt
localization/ndt_localizer/launch/: map_loader.launch.py
localization/ndt_localizer/src/: new_ndt.cpp
planner/costmap_converter/costmap_converter/include/costmap_converter/costmap_to_dynamic_obstacles/: blob_detector.h
planner/costmap_converter/costmap_converter/src/costmap_to_dynamic_obstacles/: blob_detector.cpp
planner/wipod_nav/: CMakeLists.txt  package.xml
planner/wipod_nav/config/: global_costmap.yaml  goals.json  local_costmap.yaml  smac_planner_params.yaml  smoother_server.yaml  teb_local_planner_params.yaml  velocity_smoother.yaml
planner/wipod_nav/launch/: planner.launch.py
planner/wipod_nav/src/: osm_2_waypoint.py  sim_goal_publisher.py  waypoint_processor.cpp
ros2_socketcan/ros2_socketcan/launch/: socket_can_bridge.launch.xml
sensing/ground_filter/: CMakeLists.txt  package.xml
sensing/ground_filter/src/: laser_scan_to_bounding_box.cpp  lidar_processor.cpp
sensing/pointcloud_preprocessing/: CMakeLists.txt
sensing/pointcloud_preprocessing/include/: filter.hpp
sensing/pointcloud_preprocessing/launch/: pointcloud_preprocessing.launch.xml
sensing/pointcloud_preprocessing/param/: params.yaml
sensing/pointcloud_preprocessing/src/crop_box/: crop_box.cpp
sensing/pointcloud_preprocessing/src/ransac_filter/: ransac_filter_node.cpp
sensing/pointcloud_preprocessing/src/ray_ground_classifier/: ray_ground_classifier_node.cpp
sensing/sensor_components/Xsens_MTi_ROS_Driver_and_Ntrip_Client/src/ntrip_client/launch/: ntrip_client.launch.py
wipod_interface/wipod_interface/: CMakeLists.txt  package.xml
wipod_interface/wipod_interface/include/: TMercator.hpp  build_depends.repos  wipod_interface.hpp
wipod_interface/wipod_interface/launch/: car_to_auto.launch.xml
wipod_interface/wipod_interface/src/: wipod_interface.cpp
wipod_visualization/: CMakeLists.txt  package.xml
wipod_visualization/config/: robot.urdf.xacro
wipod_visualization/launch/: visualization.launch.py
