<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wipod_interface</name>
  <version>0.1.0</version>
  <description>WIPOD2 Interface for Autoware</description>
  <maintainer email="hssathyakailash.ec18@rvce.edu.in">H.S.S.Kailash</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <build_depend>rclcpp</build_depend>
  <build_depend>can_msgs</build_depend>

  <!-- <depend>autoware_auto_control_msgs</depend> -->
  <!-- <depend>autoware_auto_vehicle_msgs</depend> -->
  <!-- <depend>can_msgs</depend> -->
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>tf2_ros</depend>
  
  <!-- <depend>rclcpp</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>tier4_api_msgs</depend>
  <depend>tier4_api_utils</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>vehicle_info_util</depend> -->

  
  <!-- <test_depend>autoware_lint_common</test_depend> -->

  <!-- <exec_depend>rclcpp</exec_depend> -->
  <!-- <exec_depend>can_msgs</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
